--- a/src/scp-294/templates/layout.html
+++ b/src/scp-294/templates/layout.html
@@ -8,19 +8,8 @@
     <script src="/js/my-js.js"></script>
 </head>
 <body style="width: 90%">
-<div class="rowDiv" style="display: flex;">
-    <div class="selectDiv">
-        <label>Group: </label>
-        <select id="selectGroup">
-            <option value="1">TODO</option>
-        </select>
-    </div>
-    <div class="selectDiv">
-        <label>Record: </label>
-        {{ template "records" . }}
-    </div>
-
-    <button id="btnLoad" onclick="loadRecord()">Load</button>
+<div id="divHeader">
+    {{ template "header" . }}
 </div>
 
 <div class="rowDiv" style="display: flex;justify-content: space-between">
@@ -33,9 +22,9 @@
                 {{end}}
             </select>
         </div>
-        <button id="btnConvert" onclick="convert()">Convert</button>
+        <button onclick="convert()">Convert</button>
     </div>
-    <button id="btnSave" onclick="saveRecord()" style="margin-left: 100px">Save</button>
+    <button onclick="saveRecord()" style="margin-left: 100px">Save</button>
 </div>
 
 <div class="rowDiv" style="display: flex;justify-content: space-between">
