--- a/src/scp-294/templates/layout.html
+++ b/src/scp-294/templates/layout.html
@@ -22,9 +22,10 @@
                 {{end}}
             </select>
         </div>
-        <button onclick="convert()">Convert</button>
+        <button class="rowBtn" onclick="convert()">Convert</button>
+        <button class="rowBtn" onclick="clearText()">Clear</button>
     </div>
-    <button onclick="saveRecord()" style="margin-left: 100px">Save</button>
+    <button onclick="addRecord()">Save</button>
 </div>
 
 <div class="rowDiv" style="display: flex;justify-content: space-between">
