--- a/src/scp-294/templates/header.html
+++ b/src/scp-294/templates/header.html
@@ -2,25 +2,25 @@
 <div class="rowDiv" style="display: flex;">
     <div class="selectDiv">
         <label>Group: </label>
-        <select id="selectGroup">
+        <select id="selectGroup" onchange="changeGroup()">
             {{range $key, $group := .Groups}}
             <option value={{$group.Id}}>{{$group.Name}}</option>
             {{end}}
         </select>
     </div>
-    <button onclick="createGroup()">Create</button>
-    <button onclick="deleteGroup()">Delete</button>
+    <button class="rowBtn" onclick="createGroup()">Create</button>
+    <button class="rowBtn" onclick="deleteGroup()">Delete</button>
 </div>
 <div class="rowDiv" style="display: flex;">
     <div class="selectDiv">
         <label>Record: </label>
         <select id="selectRecord">
             {{range $key, $record := .Records}}
-            <option value={{$record.Id}}>{{$record.Name}}</option>
+            <option value={{$record.Id}} groupId={{$record.GroupId}}>{{$record.Name}}</option>
             {{end}}
         </select>
     </div>
-    <button onclick="loadRecord()">Load</button>
-    <button onclick="deleteRecord()">Delete</button>
+    <button class="rowBtn" onclick="loadRecord()">Load</button>
+    <button class="rowBtn" onclick="deleteRecord()">Delete</button>
 </div>
 {{ end }}
