--- a/src/scp-294/wwwroot/css/my-css.css
+++ b/src/scp-294/wwwroot/css/my-css.css
@@ -1,7 +1,14 @@
 textarea {
-    width: 48%;
-    height: 600px;
+    width: 100%;
     font-size: 16px;
+}
+
+#input {
+    height: 200px;
+}
+
+#output {
+    min-height: 200px;
 }
 
 .rowDiv {
