scp-294 upload file 1

--- a/src/scp-294/templates/layout.html
+++ b/src/scp-294/templates/layout.html
@@ -40,6 +40,9 @@
 
 <div class="rowDiv">
     <textarea id="input" placeholder="input..."></textarea>
+    <div id="inputFileDiv">
+        <input id="inputFile" type="file"/>
+    </div>
 </div>
 <div class="rowDiv">
     <textarea id="output" placeholder="output..."></textarea>
