scp-294 upload file 3

--- a/src/scp-294/templates/header.html
+++ b/src/scp-294/templates/header.html
@@ -3,7 +3,7 @@
     <div style="display: flex;">
         <div class="selectDiv">
             <label>Group: </label>
-            <select id="selectGroup" title="selectGroup" onchange="changeGroup()">
+            <select id="selectGroup" title="selectGroup" onchange="onGroupChange()">
                 {{range $key, $group := .Groups}}
                 <option value={{$group.Id}}>{{$group.Name}}</option>
                 {{end}}
