--- a/src/scp-294/wwwroot/css/my-css.css
+++ b/src/scp-294/wwwroot/css/my-css.css
@@ -1,7 +1,11 @@
+body {
+    width: 90%;
+}
+
 textarea {
     width: 100%;
     font-size: 16px;
-    resize:none;
+    resize: none;
 }
 
 #input {
@@ -10,6 +14,7 @@ textarea {
 
 #output {
     min-height: 200px;
+    max-height: 800px;
 }
 
 .rowDiv {
