--- a/src/scp-294/wwwroot/css/my-css.css
+++ b/src/scp-294/wwwroot/css/my-css.css
@@ -1,11 +1,14 @@
 body {
     width: 90%;
+    background: rgba(105, 151, 103, 0.72);
 }
 
 textarea {
     width: 100%;
     font-size: 16px;
     resize: none;
+    border-radius: 4px;
+    background: #c9dacced;
 }
 
 #input {
@@ -29,12 +32,25 @@ textarea {
     margin-right: 20px;
 }
 
+input {
+    width: 400px;
+    height: 28px;
+    font-size: 16px;
+    border-radius: 4px;
+    background: #c9dacced;
+}
+
 select {
     width: 240px;
     height: 28px;
     font-size: 16px;
+    border-radius: 4px;
+    background: #c9dacced;
 }
 
 button {
+    width: 80px;
     font-size: 16px;
+    border-radius: 4px;
+    background: #c9dacced;
 }
