--- a/src/scp-294/templates/layout.html
+++ b/src/scp-294/templates/layout.html
@@ -23,9 +23,29 @@
             </select>
         </div>
         <div class="selectDiv">
+            <label>InputFormat: </label>
+            <select id="inputFormat" title="inputFormat">
+                {{range $key, $value := .InputFormatMap}}
+                <option value={{$key}} title="{{ (index $.FormatDescMap $key) }}">{{$value}}</option>
+                {{end}}
+            </select>
+        </div>
+    </div>
+</div>
+<div class="rowDiv" style="display: flex;justify-content: space-between">
+    <div style="display: flex;">
+        <div class="selectDiv">
             <label>OutputType: </label>
             <select id="outputType" title="outputType">
                 {{range $key, $value := .OutputTypeMap}}
+                <option value={{$key}}>{{$value}}</option>
+                {{end}}
+            </select>
+        </div>
+        <div class="selectDiv">
+            <label>OutputFormat: </label>
+            <select id="outputFormat" title="outputFormat">
+                {{range $key, $value := .OutputFormatMap}}
                 <option value={{$key}}>{{$value}}</option>
                 {{end}}
             </select>
@@ -39,7 +59,7 @@
 </div>
 
 <div class="rowDiv">
-    <textarea id="input" placeholder="input..."></textarea>
+    <textarea id="inputText" placeholder="input text..."></textarea>
     <div id="inputFileDiv">
         <label>InputFile: </label>
         <input id="inputFile" title="inputFile" type="file"/>
