--- a/src/scp-294/wwwroot/css/my-css.css
+++ b/src/scp-294/wwwroot/css/my-css.css
@@ -20,6 +20,18 @@ textarea {
     /*max-height: 600px;*/
 }
 
+#inputFileDiv {
+    display: flex;
+    justify-content: center; /* center horizontally */
+    align-items: center; /* center vertically */
+    height: 100px;
+}
+
+#inputFile {
+    width: 100%;
+    height: 100%;
+}
+
 .rowDiv {
     margin-top: 20px;
 }
